2004-05-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/pwg/pwg.xml:
          remove hardcoded stylesheet path (duh)
	* docs/random/release:
	* docs/gst/gstreamer-sections.txt:
	* gst/Makefile.am:
	* gst/gst.h:
	* gst/gst_private.h:
	* gst/gstcaps.c:
	* gst/gstevent.c:
	* gst/gstformat.c:
	* gst/gstinfo.c:
	* gst/gstinfo.h:
	* gst/gstinterface.c:
	* gst/gstmemchunk.c:
	* gst/gstprobe.c:
	* gst/gstquery.c:
	* gst/gstregistry.c:
	* gst/gstregistrypool.c:
	* gst/gststructure.c:
	* gst/gsttaginterface.c:
	* gst/gstthread.c:
	* gst/gsttrace.c:
	* gst/gsttypefind.c: (gst_type_find_factory_get_type):
	* gst/gsturi.c:
	* gst/gstvalue.c:
          deprecate gst_info; remove gstlog.h
   

2004-05-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* po/en_GB.po:
	* po/sv.po:
	* po/uk.po:
          updated translations

2004-05-03  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstbin.c: (gst_bin_dispose):
	  better debugging

2004-05-03  Johan Dahlin  <johan@gnome.org>

	* gst/schedulers/gstoptimalscheduler.c
	(gst_opt_scheduler_pad_unlink): Check if element is non-NULL and
	really is a GstElement. Avoids critical when running gst-launch -v
	and a oggdemux/decoding pipeline.

2004-05-02  Stephane Loeuillet <stephane.loeuillet@tiscali.fr>

	* docs/gst/tmpl/gstpipeline.sgml :
	* docs/manual/elements-api.xml :
		doc fix by Patrick Guimond (Protector) from devel ML
		reviewed by ronald

2004-05-02  Stephane Loeuillet <stephane.loeuillet@tiscali.fr>

	* docs/gst/Makefile.am :
	* docs/libs/Makefile.am :
		apply a patch from Arwed v. Merkatz so that gtk-doc
		generated docs install (same for .devhelp file)
		(fixes part 1 of #138836)

2004-04-30  Stephane Loeuillet <stephane.loeuillet@tiscali.fr>

	* docs/faq/dependencies.xml: typo
	* docs/faq/getting.xml :
	    - fix download URL for new gstreamer site
	    - hide sf.net download page as latest version aren't there
	    - fix apt URLs